--- a/paga-web-astro/src/components/Header.astro
+++ b/paga-web-astro/src/components/Header.astro
@@ -9,7 +9,7 @@ import MenuDropdown from './MenuDropdown.astro'
     <a href="/" class="flex items-center gap-2 sm:gap-3">
         <img src="/logo.png" alt="Logo CIIEMAD IPN" class="h-10 sm:h-12 lg:h-16 w-auto" />
         <h1 class="text-lg sm:text-2xl lg:text-4xl font-extrabold">
-        <span class="text-verde">SUSTENTA-</span><span class="text-gray-700">LAPP</span>
+        <span class="text-[#157054]">SUSTENTA-</span><span class="text-[#374151]">LAPP</span>
         </h1>
     </a>
 
