--- a/paga-web-astro/src/pages/index.astro
+++ b/paga-web-astro/src/pages/index.astro
@@ -78,12 +78,12 @@ import Layout from "../layouts/BaseLayout.astro";
   <!-- Texto de Muestra -->
   <section class="py-16 px-4 bg-gray-50 font-sans">
     <div class="max-w-4xl mx-auto text-center">
-      <h2 class="text-4xl font-bold text-guinda mb-6 font-serif">
+      <h2 class="text-4xl font-bold text-guinda mb-6 font-sans">
         Bienvenidos a <span class="text-verde">SUSTENTA-</span><span
           class="text-guinda">LAPP</span
         >
       </h2>
-      <p class="text-lg text-gray-600 leading-relaxed font-sans">
+      <p class="text-lg text-black leading-relaxed font-sans">
         Somos un centro de investigación comprometido con el desarrollo
         sostenible y la innovación tecnológica. Trabajamos en proyectos que
         impactan positivamente en el medio ambiente y la sociedad, promoviendo
@@ -102,7 +102,7 @@ import Layout from "../layouts/BaseLayout.astro";
         >
           <div class="p-6">
             <h3 class="text-2xl font-bold text-verde mb-4">Nuestro Trabajo</h3>
-            <p class="text-gray-600 mb-6 leading-relaxed">
+            <p class="text-black font-sans mb-6 leading-relaxed">
               Desarrollamos proyectos de investigación enfocados en
               sostenibilidad, innovación tecnológica y soluciones ambientales
               que generen un impacto positivo en la sociedad.
@@ -122,7 +122,7 @@ import Layout from "../layouts/BaseLayout.astro";
         >
           <div class="p-6">
             <h3 class="text-2xl font-bold text-guinda mb-4">¿Quiénes Somos?</h3>
-            <p class="text-gray-600 mb-6 leading-relaxed">
+            <p class="text-black font-sans mb-6 leading-relaxed">
               Somos un equipo multidisciplinario de investigadores y
               profesionales comprometidos con la generación de conocimiento y el
               desarrollo de tecnologías sustentables.
@@ -142,7 +142,7 @@ import Layout from "../layouts/BaseLayout.astro";
         >
           <div class="p-6">
             <h3 class="text-2xl font-bold text-gray-700 mb-4">Publicaciones</h3>
-            <p class="text-gray-600 mb-6 leading-relaxed">
+            <p class="text-black font-sans mb-6 leading-relaxed">
               Explora nuestras investigaciones, artículos científicos y
               publicaciones que contribuyen al avance del conocimiento en el
               área de desarrollo sustentable.
