--- a/paga-web-astro/src/pages/conocer-mas.astro
+++ b/paga-web-astro/src/pages/conocer-mas.astro
@@ -29,7 +29,7 @@ import Layout from '../layouts/BaseLayout.astro';
         <a href="https://www.facebook.com/profile.php?id=100080595766135" target="_blank" rel="noopener" title="Facebook">
           <img src="/redes/logo2/facebook.png" alt="Facebook" class="w-12 h-12 hover:scale-110 transition-transform" />
         </a>
-        <a href="https://instagram.com/tlali.nantli.tour?igshid=YmMyMTA2M2Y=" target="_blank" rel="noopener" title="Instagram">
+        <a href="https://www.instagram.com/sustentaterra_/" target="_blank" rel="noopener" title="Instagram">
           <img src="/redes/logo2/instagram.png" alt="Instagram" class="w-12 h-12 hover:scale-110 transition-transform" />
         </a>
         <a href="https://twitter.com/NantliTour?t=1zLFzq-5T_GOpGImZQghhA&s=09" target="_blank" rel="noopener" title="Twitter">
