--- a/paga-web-astro/src/pages/conocer-mas.astro
+++ b/paga-web-astro/src/pages/conocer-mas.astro
@@ -22,9 +22,9 @@ import Layout from '../layouts/BaseLayout.astro';
   </section>
 
   <!-- Nueva sección de video -->
-  <section class="bg-[rgb(240,233,224)] pt-2 pb-16 w-full"> <!-- Changed py-16 to pt-2 pb-16 -->
+  <section class="bg-[rgb(240,233,224)] pt-2 pb-8 w-full"> <!-- Reduced bottom padding -->
     <div class="max-w-4xl mx-auto px-4">
-      <div class="aspect-w-16 aspect-h-9">
+      <div class="aspect-w-16 aspect-h-9 hover:scale-105 hover:shadow-xl transition-all duration-300">
         <iframe 
           class="w-full h-[500px] rounded-xl shadow-lg"
           src="https://www.youtube.com/embed/m0CmxvPuN0I"
@@ -32,6 +32,44 @@ import Layout from '../layouts/BaseLayout.astro';
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen>
+        </iframe>
+      </div>
+    </div>
+  </section>
+
+  <!-- Nueva sección de podcast Spotify -->
+  <section class="bg-[rgb(240,233,224)] pt-2 pb-8 w-full">
+    <div class="max-w-4xl mx-auto px-4">
+      <div class="aspect-w-16 aspect-h-9 hover:scale-105 hover:shadow-xl transition-all duration-300">
+        <iframe 
+          style="border-radius:12px" 
+          src="https://open.spotify.com/embed/episode/5Ia9rAk3Tc4Z40Aj7QjEVL?utm_source=generator"
+          width="100%" 
+          height="352" 
+          class="rounded-xl shadow-lg"
+          frameborder="0" 
+          allowfullscreen="" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy">
+        </iframe>
+      </div>
+    </div>
+  </section>
+
+  <!-- Segunda sección de podcast Spotify -->
+  <section class="bg-[rgb(240,233,224)] pt-2 pb-16 w-full">
+    <div class="max-w-4xl mx-auto px-4">
+      <div class="aspect-w-16 aspect-h-9 hover:scale-105 hover:shadow-xl transition-all duration-300">
+        <iframe 
+          style="border-radius:12px" 
+          src="https://open.spotify.com/embed/episode/2o0nHV44cSMncZZ6YpWFFF?utm_source=generator"
+          width="100%" 
+          height="352" 
+          class="rounded-xl shadow-lg"
+          frameborder="0" 
+          allowfullscreen="" 
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+          loading="lazy">
         </iframe>
       </div>
     </div>
