--- a/paga-web-astro/src/components/Header.astro
+++ b/paga-web-astro/src/components/Header.astro
@@ -32,7 +32,7 @@ import MenuDropdown from './MenuDropdown.astro'
         </a>
       </li>
       <li>
-        <a href="/conocer-mas" class="relative font-bold transition-colors duration-300 hover:text-gray-600 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-gray-600 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
+        <a href="/podcast" class="relative font-bold transition-colors duration-300 hover:text-gray-600 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-gray-600 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
           Podcast
         </a>
       </li>
@@ -101,7 +101,7 @@ import MenuDropdown from './MenuDropdown.astro'
           </a>
         </li>
         <li>
-          <a href="/conocer-mas" class="block font-bold text-gray-700 hover:text-gray-600 transition-colors duration-200">
+          <a href="/podcast" class="block font-bold text-gray-700 hover:text-gray-600 transition-colors duration-200">
             Podcast
           </a>
         </li>
