--- a/paga-web-astro/src/layouts/BaseLayout.astro
+++ b/paga-web-astro/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 // src/layouts/BaseLayout.astro
+import { ViewTransitions } from "astro:transitions";
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
@@ -7,6 +8,7 @@ import Footer from "../components/Footer.astro";
 
 <html lang="es">
   <head>
+    <ViewTransitions />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SUSTENTA-LAPP / Nuestro trabajo</title>
