--- a/paga-web-astro/src/components/Footer.astro
+++ b/paga-web-astro/src/components/Footer.astro
@@ -2,7 +2,7 @@
 // src/components/Footer.astro
 ---
 
-<footer class="bg-[rgb(110,25,66)] text-white py-12 mt-20">
+<footer class="bg-guinda text-white py-12 mt-20">
   <div class="max-w-7xl mx-auto px-4">
     <!-- Contenedor principal con logos y texto -->
     <div
