--- a/paga-web-astro/src/components/Header.astro
+++ b/paga-web-astro/src/components/Header.astro
@@ -27,8 +27,8 @@ import MenuDropdown from './MenuDropdown.astro'
         </a>
       </li>
       <li>
-        <a href="/cobertura" class="relative font-bold transition-colors duration-300 hover:text-green-700 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-green-600 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
-          Cobertura
+        <a href="/galeria" class="relative font-bold transition-colors duration-300 hover:text-green-700 after:absolute after:left-0 after:-bottom-1 after:w-full after:h-0.5 after:bg-green-600 after:scale-x-0 hover:after:scale-x-100 after:transition-transform after:duration-300">
+          Galería
         </a>
       </li>
       <li>
@@ -96,8 +96,8 @@ import MenuDropdown from './MenuDropdown.astro'
           </a>
         </li>
         <li>
-          <a href="/cobertura" class="block font-bold text-gray-700 hover:text-green-700 transition-colors duration-200">
-            Cobertura
+          <a href="/galeria" class="block font-bold text-gray-700 hover:text-green-700 transition-colors duration-200">
+            Galería
           </a>
         </li>
         <li>
