--- a/paga-web-astro/src/pages/galeria.astro
+++ b/paga-web-astro/src/pages/galeria.astro
@@ -28,7 +28,7 @@ const galeriaItems = [
     src: "/galeria/COORDINADORA CEIMAS2024.jpeg",
     alt: "COORDINADORA CEIMAS2024",
     title: "COORDINADORA CEIMAS2024",
-    description: "Participación de Xochitl Bello, Karla Ginez y Esperanza Hernández en el equipo de coordinación del 1er Congreso Estudiantil Interdisciplinario sobre Medio Ambiente y Sustentabilidad (CEIMAS 2024).",
+    description: "Participación de Xochitl Bello, Karla Ginez y Esperanza Hernández en el equipo de coordinación del 1er Congreso Estudiantil Interdisciplinario sobre Medio Ambiente y Sustentabilidad (CEIMAS 2024)",
     fecha: "2023-11-10",
   },
   {
@@ -63,7 +63,7 @@ const galeriaItems = [
     src: "/galeria/SIEA 2023.jpg",
     alt: "SIEA 2023",
     title: "SIEA 2023",
-    description: "Participación de Ana Laura Cervantes en el Simposio y Seminario Internacional de Educación Ambiental y Desarrollo Sustentable (SIEA 2023).",
+    description: "Participación de Ana Laura Cervantes en el Simposio y Seminario Internacional de Educación Ambiental y Desarrollo Sustentable (SIEA 2023)",
     fecha: "2024-02-28",
   },
 ];
